@@ -26,21 +26,29 @@ HISTORY
         other problems.  Internationalization has been added and ports to DOS,
         Windows, Cygwin and OS/2 Warp have been made. 
 
-	These implementations of dos2unix and unix2dos were originally made as
-	an Open Source alternative for dos2unix/unix2dos under SunOS/Solaris.
-	They have similar conversion modes, namely ascii, 7bit and iso.
-	The first versions were made by John Birchfield in 1989, and in 1995
-	rewritten from scratch by Benjamin Lin. Mac to Unix conversion was
-	added by Bernd Johannes Wuebben in 1998, Unix to Mac conversion by
-	Erwin Waterlander in 2010.
+	These implementations of dos2unix and unix2dos have been modelled after
+	dos2unix/unix2dos under SunOS/Solaris.  They have similar conversion
+	modes, namely ascii, 7bit and iso.  The first versions were made by
+	John Birchfield in 1989, and in 1995 rewritten from scratch by Benjamin
+	Lin. Mac to Unix conversion was added by Bernd Johannes Wuebben in
+	1998, Unix to Mac conversion by Erwin Waterlander in 2010.
+
+        Features
+
+        * Native language support: Dutch, English, Esperanto, German.
+        * Automatically skips binary and non-regular files
+        * In-place, paired, or stdio mode conversion.
+        * Keep original file dates option.
+        * 7-bit and iso conversion modes like SunOS dos2unix.
+
 
 AUTHORS
 
-        Erwin Waterlander       version 3.2-5.2  2009-2011 
-        Christian Wurll         version 3.1      1998
-        Bernd Johannes Wuebben  version 3.0      1998
-        Benjamin Lin            version 1.1-2.3  1994-1995
-        John Birchfield         version 1.0      1989
+        Erwin Waterlander       version 3.2-5.2.1  2009-2011 
+        Christian Wurll         version 3.1        1998
+        Bernd Johannes Wuebben  version 3.0        1998
+        Benjamin Lin            version 1.1-2.3    1994-1995
+        John Birchfield         version 1.0        1989
 
 TRANSLATORS
 
